add css to edit account

--- a/frontend/src/app/components/user/change-password/change-password.component.html
+++ b/frontend/src/app/components/user/change-password/change-password.component.html
@@ -1,35 +1,31 @@
-<p>change-password works!</p>
 <div class="container">
     <div class="change-password">
         <form [formGroup]="changePassForm" (ngSubmit)="changePassword()">
             <h2>Change password</h2>
             <div class="label">
-                <label >Old password: <input formControlName="oldPassword" type="password" placeholder="Old password"></label>
-            
+                <label >Old password: <p-password formControlName="oldPassword" type="password" placeholder="Old password" [toggleMask]="true" [feedback]=false></p-password></label> 
             </div>
-            <!-- <div class="error-messages" *ngIf="changePassForm.controls.newPassword.invalid && (changePassForm.controls.newPassword.dirty || changePassForm.controls.newPassword.touched)"> 
-                <small *ngIf="changePassForm.controls.newPassword.errors?.['required']">
+            <div class="error-messages" *ngIf="changePassForm.controls.oldPassword.invalid && (changePassForm.controls.oldPassword.dirty || changePassForm.controls.oldPassword.touched)"> 
+                <small *ngIf="changePassForm.controls.oldPassword.errors?.['required']">
                     Old password is required.
                 </small>
-
-            </div> -->
-            <div class="label">
-                <label >New password: <input formControlName="password" type="password" placeholder="New password"></label>
-            
             </div>
-            <!-- <div class="error-messages" *ngIf="changePassForm.controls.newPassword.invalid && (changePassForm.controls.newPassword.dirty || changePassForm.controls.newPassword.touched)"> 
-                <small *ngIf="changePassForm.controls.newPassword.errors?.['required']">
+            <div class="label">
+                <label >New password: <p-password formControlName="password" type="password" placeholder="New password" [toggleMask]="true" ></p-password></label>
+            </div>
+            <div class="error-messages" *ngIf="changePassForm.controls.password.invalid && (changePassForm.controls.password.dirty || changePassForm.controls.password.touched)"> 
+                <small *ngIf="changePassForm.controls.password.errors?.['required']">
                     New password is required.
                 </small>
-                <small *ngIf="changePassForm.controls.newPassword.errors?.['minlength']">
+                <small *ngIf="changePassForm.controls.password.errors?.['minlength']">
                     Passwords must be at least 8 characters long.
                 </small>
-            </div> -->
-            <div class="label">
-                <label>Confirm new password: <input formControlName="confirmPassword" type="password" placeholder="Confirm new password"></label>
             </div>
-            <!-- <div class="error-messages" *ngIf="changePassForm.controls.confirmNewPassword.invalid && (changePassForm.controls.confirmNewPassword.dirty || changePassForm.controls.confirmNewPassword.touched)"> 
-                <small *ngIf="changePassForm.controls.confirmNewPassword.errors?.['required']">
+            <div class="label">
+                <label>Confirm new password: <p-password formControlName="confirmPassword" type="password" placeholder="Confirm new password" [toggleMask]="true" [feedback]=false></p-password></label>
+            </div>
+            <div class="error-messages" *ngIf="changePassForm.controls.confirmPassword.invalid && (changePassForm.controls.confirmPassword.dirty || changePassForm.controls.confirmPassword.touched)"> 
+                <small *ngIf="changePassForm.controls.confirmPassword.errors?.['required']">
                     Confirm new password is required.
                 </small>
             </div>
@@ -37,8 +33,8 @@
                 <small>
                     Passwords are diffrent.
                 </small> 
-            </div>  -->
-            <button pbutton type="submit">Change password</button>
+            </div> 
+            <button pButton type="submit" icon="pi pi-pencil" label="Change password"></button>
         </form>
     </div>
 </div>
