--- a/frontend/src/app/components/user/edit-data/edit-data.component.html
+++ b/frontend/src/app/components/user/edit-data/edit-data.component.html
@@ -13,7 +13,7 @@
                     Enter valid email.
                 </small>
             </div>
-            <button pbutton type="submit">Edit data</button>
+            <button pButton type="submit" icon="pi pi-user-edit" label="Edit data"></button>
         </form>
     </div>
 </div>
