--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -52,16 +52,16 @@
                     </div>
                     <div class="game-grid-action">
                         <span class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}}</span>
-                        <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
+                        <!-- <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn"> -->
                             <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
                             <app-game-add-form *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
                             <ng-template #noForm>
                               </ng-template>
                             <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
-                        </div>
-                        <ng-template #notLoggedIn>
+                        <!-- </div> -->
+                        <!-- <ng-template #notLoggedIn>
                             <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
-                        </ng-template>
+                        </ng-template> -->
                      </div> 
                 </div>
             </div>
