--- a/frontend/src/app/components/user/delete-account/delete-account.component.html
+++ b/frontend/src/app/components/user/delete-account/delete-account.component.html
@@ -1,6 +1,5 @@
 <div>
-    <h3>Delete Account</h3>
+    <h2>Delete Account</h2>
     <p>Are you sure you want to delete your account? This action cannot be undone.</p>
-
-    <p-button type="button" label="Delete Account" icon="pi pi-trash" (click)="deleteAccount()" class="p-button-danger"></p-button>
+    <button pButton type="button" label="Delete Account" icon="pi pi-trash" (click)="deleteAccount()" class="p-button-danger"></button>
 </div>
