--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -3,14 +3,28 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px; 
+    width: 400px; 
     height: auto;
     background-color:#ffffff;
     border: 1.5px solid #c7c7c7;
     padding: 30px;
     border-radius: 10px; 
     box-shadow: 0 40px 40px 0 rgba(0, 0, 0, 0.2); 
-   
+    overflow: hidden;
+}
+
+.form::before{
+  position: absolute;
+  content: "";
+  width: 360px;
+  height: 350px;
+  background-color: rgb(243, 229, 222);
+  transform: rotate(45deg);
+  left: -180px;
+  bottom: 30px;
+  z-index: -1;
+  border-radius: 30px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.082);
 }
 
 .container h2{
