--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class = "container">
-    <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
+    <form class="form" [formGroup]="registerForm" (ngSubmit)="registerUser()">
         <h2>Sign up</h2>
         <div class="label">
             <label>NickName: <input formControlName="nickName" type="text" pInputText placeholder="NickName"></label>
